# gainscalc

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg
gainscalc/: ethscan.py  fifo.py  io.py  rates.py
gainscalc/tools/: __init__.py  bstamp.py  cmotion.py  gains.py
src/gainscalc/: __init__.py  fifo.py  io.py  rates.py
src/gainscalc/templates/: breakdown.tpl
src/gainscalc/tools/: __init__.py  bstamp.py  cmgains.py  cmotion.py  deposit_form.py  gains.py  gains_cli.py  multi.py  pdf_report.py  supplement.py
tests/: test_bstamp.py  test_cmotion.py  test_fifo.py  test_multi.py
verot/: ethscan.py  fifo.py
