[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gainscalc"
dynamic = ["version"]
dependencies = [
    "click",
    "pandas",
    "yfinance",
]

[project.scripts]
ethexport    = "gainscalc.ethscan:main"
cmgains      = "gainscalc.tools.cmgains:main"
deposit-form = "gainscalc.tools.deposit_form:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gainscalc/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gainscalc"]
